--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ contact at highhay dot com
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
     <!-- Page Title Here -->
-    <title>Fractal.help</title>
+    <title>О нас</title>
 
     <!-- Meta -->
     <!-- Page Description Here -->
